--- a/6. Evaluation and Conclusion.ipynb
+++ b/6. Evaluation and Conclusion.ipynb
@@ -6,9 +6,34 @@
    "metadata": {},
    "source": [
     "Pros:\n",
-    "- asdf\n",
-    "- sf sdaf in\n",
-    "  "
+    "\n",
+    "- The Co-Pilot was very perceptive to each of our concerns, prefences, and requirements\n",
+    "- Even though we started off coding it to help plan out courses for 3 inteded majors and 1 minor, the Co-Pilot essentially is able to help plan course schedules for any combination of major and minor now, along with specific requests (such as advanced level courses for a senior)\n",
+    "\n",
+    "Cons:\n",
+    "- Since the full list of Penn's current course offerings is only accessible with a Pennkey login, it is not possible for our Co-Pilot to go directly into path@penn to take into consideration different choices in professors or times for each course\n",
+    "- Some classes that are typically listed under one semester could be discontinued or not offered in a specific semester, which the Co-Pilot again would not have access to know about  \n",
+    "- \n",
+    "\n",
+    "## Overall Thoughts:\n",
+    "\n",
+    "\n",
+    "Slide 3\n",
+    "\n",
+    "import sys\n",
+    "import base64\n",
+    "import zlib\n",
+    "from IPython.display import Image,display,SVG\n",
+    "\n",
+    "def mm(diagram):\n",
+    "    encoded_diagram = base64.urlsafe_b64encode(zlib.compress(diagram.encode('utf-8'), 9)).decode('ascii')\n",
+    "    dia_url = f'https://kroki.io/mermaid/svg/{encoded_diagram}'\n",
+    "    display(Image(url=dia_url))\n",
+    "\n",
+    "def mm(diagram):\n",
+    "    encoded_diagram = base64.urlsafe_b64encode(zlib.compress(diagram.encode('utf-8'), 9)).decode('ascii')\n",
+    "    dia_url = f'https://kroki.io/mermaid/svg/{encoded_diagram}'\n",
+    "    display(Image(url=dia_url))"
    ]
   },
   {
