--- a/3 User Pathways.ipynb
+++ b/3 User Pathways.ipynb
@@ -2,11 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bbedd8f0-77b7-4df5-ae3b-4197570e3bfd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "import base64\n",
+    "import zlib\n",
+    "from IPython.display import Image,display,SVG\n",
+    "\n",
+    "def mm(diagram):\n",
+    "    encoded_diagram = base64.urlsafe_b64encode(zlib.compress(diagram.encode('utf-8'), 9)).decode('ascii')\n",
+    "    dia_url = f'https://kroki.io/mermaid/svg/{encoded_diagram}'\n",
+    "    display(Image(url=dia_url))\n",
+    "\n",
+    "def mm(diagram):\n",
+    "    encoded_diagram = base64.urlsafe_b64encode(zlib.compress(diagram.encode('utf-8'), 9)).decode('ascii')\n",
+    "    dia_url = f'https://kroki.io/mermaid/svg/{encoded_diagram}'\n",
+    "    display(Image(url=dia_url))"
+   ]
   }
  ],
  "metadata": {
