--- a/4. Gradio Interface.ipynb
+++ b/4. Gradio Interface.ipynb
@@ -36,8 +36,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7861\n",
-      "* Running on public URL: https://01a97c6e01c9d6dcf4.gradio.live\n",
+      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* Running on public URL: https://8816a8ccd184eeaffa.gradio.live\n",
       "\n",
       "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
      ]
@@ -45,7 +45,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"https://01a97c6e01c9d6dcf4.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://8816a8ccd184eeaffa.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -61,6 +61,13 @@
      "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Skipping data after last boundary\n"
+     ]
     }
    ],
    "source": [
@@ -205,12 +212,51 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c56fb3f-f905-4394-9a6b-152e35c4a753",
+   "cell_type": "markdown",
+   "id": "78729971-4854-45e0-89f3-0096d0927f85",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Example use case for Cinema Studies:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0beff34b-71e8-4649-9000-4953238a3f4f",
+   "metadata": {},
+   "source": [
+    "<img src=\"c1.png\" width=\"100%\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e5a05af-f46b-4dd9-980e-a3efaf441c44",
+   "metadata": {},
+   "source": [
+    "<img src=\"c2.png\" width=\"100%\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "066aaed3-630b-485b-a9a9-bf062e580d5c",
+   "metadata": {},
+   "source": [
+    "# Example Use Case for French Major:\n",
+    "<img src=\"a.png\" width=\"100%\"/>\n",
+    "<img src=\"b.png\" width=\"100%\"/>\n",
+    "<img src=\"c.png\" width=\"100%\"/>\n",
+    "<img src=\"d.png\" width=\"100%\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d0ac229-0761-486f-b348-3566a6e8779a",
+   "metadata": {},
+   "source": [
+    "# Explanation:\n",
+    "Above are two different use cases of the CoPilot for course planning purposes.\n",
+    "\n",
+    "At the end of the second conversation, I try to divert the LLM to figure out what I should eat for dinner. Good news is that our prompt to stay on track worked, and the Course Planner does not divert off topic and recognizes this is out of its scope."
+   ]
   }
  ],
  "metadata": {
