--- a/6.Evaluation_and_Conclusion.ipynb
+++ b/6.Evaluation_and_Conclusion.ipynb
@@ -5,35 +5,18 @@
    "id": "5952e516-5d4a-4168-af93-bd70ab48b7a3",
    "metadata": {},
    "source": [
-    "Pros:\n",
+    "## Pros:\n",
     "\n",
     "- The Co-Pilot was very perceptive to each of our concerns, prefences, and requirements\n",
     "- Even though we started off coding it to help plan out courses for 3 inteded majors and 1 minor, the Co-Pilot essentially is able to help plan course schedules for any combination of major and minor now, along with specific requests (such as advanced level courses for a senior)\n",
     "\n",
-    "Cons:\n",
+    "## Cons:\n",
     "- Since the full list of Penn's current course offerings is only accessible with a Pennkey login, it is not possible for our Co-Pilot to go directly into path@penn to take into consideration different choices in professors or times for each course\n",
     "- Some classes that are typically listed under one semester could be discontinued or not offered in a specific semester, which the Co-Pilot again would not have access to know about  \n",
-    "- \n",
+    "\n",
     "\n",
     "## Overall Thoughts:\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "17b741c7-79e5-43fb-ba2f-8b04456cbbd0",
-   "metadata": {},
-   "source": [
-    "Cons:\n",
-    "- "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3151625b-7efc-4c9a-b3c8-2f4d67e84961",
-   "metadata": {},
-   "source": [
-    "## Overall Thoughts:"
+    "We are very pleased with our course planner co-pilot! We were very happy to see it surpass expected limitations to the majors/minor"
    ]
   }
  ],
