--- a/6.Evaluation_and_Conclusion.ipynb
+++ b/6.Evaluation_and_Conclusion.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "\n",
     "## Overall Thoughts:\n",
-    "We are very pleased with our course planner co-pilot! We were very happy to see it surpass expected limitations to the majors/minor"
+    "We are very pleased with our course planner co-pilot! We were very happy to see it surpass expected limitations to the majors/minor we chose, and be able to plan courses for any student at penn when given the list of requirements and such. We believe that this model can be further developed by Penn to have access to all penn-materials (Path@penn, courses@penn, etc.) and be a truly useful tool in helping undergraduates plan out their four years on campus. "
    ]
   }
  ],
