--- a/5.Trying_different_LLMs.ipynb
+++ b/5.Trying_different_LLMs.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cd1f82b-1521-4dc5-becf-620e3540957e",
+   "id": "66a4cd4b-0403-4d19-8131-bb0166225015",
    "metadata": {},
    "source": [
     "\n",
@@ -69,10 +69,15 @@
     "\n",
     "- Long-context retention\n",
     "\n",
-    "- Robustness to additional CSV uploads\n",
-    "\n",
-    "\n",
-    "\n",
+    "- Robustness to additional CSV uploads"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af400726-76e4-4684-b74c-4058251cf68a",
+   "metadata": {},
+   "source": [
+    "## 1\n",
     "\n",
     "### 🧠 Claude\n",
     "<img src=\"img/imag1.png\" width=\"50%\"/>\n",
@@ -89,9 +94,15 @@
     "<img src=\"img/imag3.png\" width=\"50%\"/>\n",
     "\n",
     "💡 **Analysis:**\n",
-    "Claude is the only model that **proactively suggests cross-listed courses**, showing familiarity with real catalog structures. This ability to exploit dual-counting between majors (not just within one department) is rare among LLMs and demonstrates a nuanced understanding of Penn’s offerings.\n",
-    "\n",
-    "\n",
+    "Claude is the only model that **proactively suggests cross-listed courses**, showing familiarity with real catalog structures. This ability to exploit dual-counting between majors (not just within one department) is rare among LLMs and demonstrates a nuanced understanding of Penn’s offerings.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8273a27-d81c-4ceb-a777-597c65b32136",
+   "metadata": {},
+   "source": [
+    "## 2\n",
     "\n",
     "### 🌐 Gemini\n",
     "<img src=\"img/imag4.png\" width=\"50%\"/>\n",
@@ -108,11 +119,15 @@
     "“Sure! Adding a French major on top of Econ, CIMS, and DSA is ambitious, but absolutely possible in your final three semesters.”\n",
     "\n",
     "❌ **Analysis:**\n",
-    "This excerpt highlights a **failure to gate-check logic**. Unlike Claude, Gemini shows no cost-benefit awareness—it green-lights structurally impossible combinations without acknowledging credit caps or term limits.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "This excerpt highlights a **failure to gate-check logic**. Unlike Claude, Gemini shows no cost-benefit awareness—it green-lights structurally impossible combinations without acknowledging credit caps or term limits.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba8d460a-7d7e-440f-9055-c5252f2d661d",
+   "metadata": {},
+   "source": [
+    "## 3 \n",
     "### 🔬 Deepseek\n",
     "Deepseek began strongly with user-centered prompts and structurally sound responses, but gradually drifted into **hallucination and sequencing errors**. It was especially vulnerable in longer conversations or when prompted to include additional CSVs.\n",
     "\n",
@@ -127,10 +142,14 @@
     "\n",
     "\n",
     "🧠 **Analysis:**\n",
-    "While Deepseek struggled with structure, it excelled at simulation. Asking this question shows that it understood the subjective nature of course planning. No other model attempted to tailor the plan to academic style preferences.\n",
-    "\n",
-    "\n",
-    "\n",
+    "While Deepseek struggled with structure, it excelled at simulation. Asking this question shows that it understood the subjective nature of course planning. No other model attempted to tailor the plan to academic style preferences."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cd1f82b-1521-4dc5-becf-620e3540957e",
+   "metadata": {},
+   "source": [
     "### ⚙️ Additional Findings\n",
     "#### 🔄 Scalability Failure with Additional CSVs\n",
     "When we attempted to **expand the planner’s capabilities by adding more majors/minors** (e.g., adding History, PPE, or Visual Studies CSVs), **all three models broke down**. Specifically:\n",
@@ -185,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "851d1d4a-660e-4ace-b0c8-db46e82b0574",
+   "id": "e3564860-cc35-44d8-9921-cb169587e641",
    "metadata": {},
    "outputs": [],
    "source": []
