--- a/5.Trying_different_LLMs.ipynb
+++ b/5.Trying_different_LLMs.ipynb
@@ -12,8 +12,6 @@
     "\n",
     "* CAN YOU ADD MORE DETAIL TO WHAT THIS NOTEBOOK IS DOING\n",
     "\n",
-    "* Also I would suggest breaking the following cell up into separate cells and numbering the parts so it is easier to follow\n",
-    "\n",
     "----"
    ]
   },
@@ -137,7 +135,7 @@
     "📉 **Analysis:**\n",
     "This course does not exist at Penn (The code does exist but as another class).\n",
     "\n",
-    "### 🧩 Excerpt E (Applied Focus Prompt):\n",
+    "#### 🧩 Excerpt E (Applied Focus Prompt):\n",
     "<img src=\"img/imag8.png\" width=\"50%\"/>\n",
     "\n",
     "\n",
