--- a/2.Prompt_Development.ipynb
+++ b/2.Prompt_Development.ipynb
@@ -13,20 +13,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8f5a169-d863-4f54-a519-9258375a20c3",
-   "metadata": {},
-   "source": [
-    "??? ADD DESCRIPTION OF HOW THIS WAS GENERATED AND DESCRIBE THE STRUCTURE AND PARTS"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "7ca9aa8d-7cbc-467e-9708-8c7781b8226f",
    "metadata": {},
    "source": [
     "## Developing the Prompt\n",
     "\n",
-    "In developing our prompt, we adapted the Mollick prompt for tutoring to fit our goals for the course planner copilot. We followed the GOAL, PERSONA, NARRATIVE structure as a base for our co-pilot to go off of, and then used the step-by-step model to meticulously describe what we want from the co-pilot. The *you-should* sections allowed us to craft the co-pilot exactly how we wanted it, making it sure it includes features like wrapping up the conversation with *saying you’re here if they want help refining their plan later* and other details. Moreover, the *don't do this* sections kept our co-pilot working in this one specialized realm, and not just any other LLM that is happy to give out food or backpack recommendations or "
+    "In developing our prompt, we adapted the Mollick prompt for tutoring to fit our goals for the course planner copilot. We followed the GOAL, PERSONA, NARRATIVE structure as a base for our co-pilot to go off of, and then used the step-by-step model to meticulously describe what we want from the co-pilot. The *you-should* sections allowed us to craft the co-pilot exactly how we wanted it, making it sure it includes features like wrapping up the conversation with *saying you’re here if they want help refining their plan later* and other details. Moreover, the *don't do this* sections kept our co-pilot working in this one specialized realm, and not just any other LLM that is happy to give out food or backpack recommendations for college students using the Co-Pilot."
    ]
   },
   {
