--- a/3.User_Pathways.ipynb
+++ b/3.User_Pathways.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# ADD A TITLE\n",
     "\n",
-    "* ADD AN DESCRIPTION OF WHAT THIS NOTEBOOK IS?"
+    "* To visualize our use cases, we developed several flowcharts using Mermaid. These diagrams provide a clear picture of how our platform operates, showcasing potential student journeys through course planning.\n",
+    "\n",
+    "In these charts, the \"User\" represents a student, while the \"Agent\" refers to the Course Planner Co-Pilot."
    ]
   },
   {
@@ -60,9 +62,9 @@
     "    User->>Agent: Cinema Studies\n",
     "    Agent-->>User: What year are you?\n",
     "    User->>Agent: Third year\n",
-    "    Agent->>Tool1: What classes have you completed already?\n",
-    "    Tool1->>Agent: All the core major requirements + World Film History, Screenwriting, and Cinema Production + all college gen eds\n",
-    "    Agent->>Tool1: How many classes do you want to take this semester?\n",
+    "    Agent->>User: What classes have you completed already?\n",
+    "    User->>Agent: All the core major requirements + World Film History, Screenwriting, and Cinema Production + all college gen eds\n",
+    "    Agent->>User: How many classes do you want to take this semester?\n",
     "    User->>Agent: Five courses\n",
     "    Agent-->>User: I suggest one course from the History and Geography Attribute, 2 courses from the Production and Practice Attribute + 2 CIMS-related courses! In particular, I would reccomend, History of Children's Cinema, Film Exhibition and Moviegoing, Copyright and Culture, Representations of the Holocaust, and Storytelling in Africa! Let me know if you have any other preferences or tweaks to this list.\n",
     "    '''\n",
@@ -97,9 +99,9 @@
     "    User->>Agent: Second Year\n",
     "    Agent-->>User: What courses have you taken so far?\n",
     "    User->>Agent: Well general requirement wise I only need 3 more classes, and then I've taken both required math courses and 2 of the 6 into econ courses\n",
-    "    Agent->>Tool1: That's awesome! And were you considering any minors or a double major? Or will you stick to just econ as your major\n",
-    "    Tool1->>Agent: I am considering a history minor but not sure yet\n",
-    "    Agent->>Tool1: Ok great! If you stick to taking 5 courses each semester, you can definitely make room to study abroad! I recommend finishing the four remaining econ courses before you jet off to a new land, along with 1-2 of the gen ed requirements. When you're abroad, you should take one course that will fulfill a gen-ed requirement at Penn along with 1-2 history courses. That way, you not only will be scratching off some of your core requirements from your list, but you'll be testing whether the history minor is for you! Even better, if you decide to go forward with the history minor, you will already have some credits towards completion after your semester abroad!\n",
+    "    Agent->>User: That's awesome! And were you considering any minors or a double major? Or will you stick to just econ as your major\n",
+    "    User->>Agent: I am considering a history minor but not sure yet\n",
+    "    Agent->>User: Ok great! If you stick to taking 5 courses each semester, you can definitely make room to study abroad! I recommend finishing the four remaining econ courses before you jet off to a new land, along with 1-2 of the gen ed requirements. When you're abroad, you should take one course that will fulfill a gen-ed requirement at Penn along with 1-2 history courses. That way, you not only will be scratching off some of your core requirements from your list, but you'll be testing whether the history minor is for you! Even better, if you decide to go forward with the history minor, you will already have some credits towards completion after your semester abroad!\n",
     "    '''\n",
     "\n",
     "mm(dia2)"
