--- a/3.User_Pathways.ipynb
+++ b/3.User_Pathways.ipynb
@@ -5,7 +5,7 @@
    "id": "eef52135-2f54-4ba1-be1f-128bbe91bd8b",
    "metadata": {},
    "source": [
-    "# ADD A TITLE\n",
+    "# Visualizing our use cases\n",
     "\n",
     "* To visualize our use cases, we developed several flowcharts using Mermaid. These diagrams provide a clear picture of how our platform operates, showcasing potential student journeys through course planning.\n",
     "\n",
