--- a/5.Trying_different_LLMs.ipynb
+++ b/5.Trying_different_LLMs.ipynb
@@ -5,14 +5,13 @@
    "id": "c73f73a8-02fc-4b8a-beae-b24120c1d419",
    "metadata": {},
    "source": [
-    "# Trying Different LLMs\n",
+    "# Comparing Different LLMs: Optimizing AI for Course Planning\n",
     "\n",
     "### Prompting different LLM's to become Penn CAS Co-pilots and testing there ability\n",
     "\n",
+    "This notebook includes a detailed assessment of several large language models (LLMs) and evalutes their appropriateness for helping the Course Planner Co-Pilot's academic advising capabilities. We test how well each model understands and responds to academic planning queries, respects prompt boundaries, and handles conversation focus in controlled experiments. These experiments are essential to ensuring the Co-Pilot has a reliable ability to generate correct, relevant, and actionable course recommendations appropriate to students' academic goals.\n",
     "\n",
-    "* CAN YOU ADD MORE DETAIL TO WHAT THIS NOTEBOOK IS DOING\n",
-    "\n",
-    "----"
+    "This notebook also investigates how various models handle off-topic requests carefully designed to guide the conversation astray. Such experiments are critical in determining the robustness of prompt engineering and how the models deal with detecting and rejecting useless requests. Insights from the experiments guide decisions regarding which LLMs possess the ideal level of responsiveness at the cost of staying on task, making them a better candidate for being a Co-pilot."
    ]
   },
   {
