--- a/old work/4. Gradio Interface.ipynb
+++ b/old work/4. Gradio Interface.ipynb
@@ -5,11 +5,20 @@
    "id": "3e627ce7-a928-4978-9a91-b012e8eddd16",
    "metadata": {},
    "source": [
-    "# Course Planner Co-Pilot: AI-Powered Academic Advising Interface with Gradio\n",
-    "\n",
-    "This notebook presents the development of an interactive user interface for the Course Planner Co-Pilot, an AI-based academic advising tool designed to help students plan their coursework efficiently. Built using Gradio, a powerful open-source Python library for creating web interfaces, this project integrates a trained large language model (LLM) through the OpenAI API. The interface leverages LangChain components to manage document retrieval and prompt engineering, providing students with personalized course recommendations and academic insights. The LLM is guided by a carefully crafted prompt to ensure relevant, accurate, and actionable responses that align with each student’s academic goals and preferences. This notebook outlines the full implementation, from environment setup to deployment, offering a practical example of how generative AI can enhance student advising.\n",
+    "# Some examples of building a user interface with `gradio`\n",
     "\n",
     "* https://www.gradio.app/docs/interface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b3cbfadb-beee-4136-82d9-a18c198a430a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load API key\n",
+    "_ = load_dotenv()"
    ]
   },
   {
@@ -22,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "c137cd2d-2424-4f49-a08d-9b994f0eba39",
    "metadata": {},
    "outputs": [
@@ -39,7 +48,7 @@
      "output_type": "stream",
      "text": [
       "* Running on local URL:  http://127.0.0.1:7860\n",
-      "* Running on public URL: https://8816a8ccd184eeaffa.gradio.live\n",
+      "* Running on public URL: https://09729b7f25bd54bd32.gradio.live\n",
       "\n",
       "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
      ]
@@ -47,7 +56,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"https://8816a8ccd184eeaffa.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://09729b7f25bd54bd32.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -60,16 +69,9 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Skipping data after last boundary\n"
-     ]
     }
    ],
    "source": [
@@ -214,51 +216,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "78729971-4854-45e0-89f3-0096d0927f85",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c56fb3f-f905-4394-9a6b-152e35c4a753",
    "metadata": {},
-   "source": [
-    "# Example use case for Cinema Studies:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0beff34b-71e8-4649-9000-4953238a3f4f",
-   "metadata": {},
-   "source": [
-    "<img src=\"img/c1.png\" width=\"100%\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5e5a05af-f46b-4dd9-980e-a3efaf441c44",
-   "metadata": {},
-   "source": [
-    "<img src=\"img/c2.png\" width=\"100%\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "066aaed3-630b-485b-a9a9-bf062e580d5c",
-   "metadata": {},
-   "source": [
-    "# Example Use Case for French Major:\n",
-    "<img src=\"img/a.png\" width=\"100%\"/>\n",
-    "<img src=\"img/b.png\" width=\"100%\"/>\n",
-    "<img src=\"img/c.png\" width=\"100%\"/>\n",
-    "<img src=\"img/d.png\" width=\"100%\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1d0ac229-0761-486f-b348-3566a6e8779a",
-   "metadata": {},
-   "source": [
-    "# Explanation:\n",
-    "Above are two different use cases of the CoPilot for course planning purposes. The examples above demonstrate two distinct use cases of the Course Planner Co-Pilot designed to assist with academic planning. In the first scenario, the LLM effectively handles a straightforward request by suggesting courses that fulfill specific academic requirements. \n",
-    "\n",
-    "In the second scenario, I intentionally attempt to steer the conversation off-topic by asking the LLM for unrelated advice about dinner options. This test was designed to evaluate the robustness of the system’s prompt engineering and its ability to maintain conversational boundaries. Encouragingly, the model successfully identifies this as an out-of-scope inquiry and politely declines to engage with the unrelated topic, reaffirming its role as a focused academic advising tool. This behavior highlights the effectiveness of prompt constraints in guiding LLM responses and ensuring the system remains aligned with its intended purpose."
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
